--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Book-app",
   "main": "index.js",
   "scripts": {
-  
-    "start" : "node server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +21,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "postgres": "^1.0.2",
     "superagent": "^6.1.0"
   }
 }
